--- a/juprogressbar/src/main/res/values/dimens.xml
+++ b/juprogressbar/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="progress_elevation">24dp</dimen>
     <dimen name="progress_padding">5dp</dimen>
     <dimen name="progress_margin_top">5dp</dimen>
+    <dimen name="shadow_margin_bottom">5dp</dimen>
 </resources>
