--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="blue">#FF0059FF</color>
+    <color name="red">#ff0d00</color>
+    <color name="green">#00ff66</color>
+    <color name="yellow">#FFEAFF00</color>
 </resources>
