--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:juhezi="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.juhezi.juwidgets.MainActivity">
 
-    <com.juhezi.juprogressbar.View.JuProgressbar
+    <com.juhezi.multifunctionbutton.view.MultiFunctionButton
+        android:id="@+id/mfb_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible"
-        juhezi:color1="@color/blue"
-        juhezi:color2="@color/red"
-        juhezi:color3="@color/yellow"
-        juhezi:color4="@color/green"
-        juhezi:colorNum="4"></com.juhezi.juprogressbar.View.JuProgressbar>
+        android:elevation="16dp"
+        android:padding="@dimen/activity_vertical_margin" />
+
+    <Button
+
+        android:id="@+id/btn_click"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
