--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:elevation="16dp"
-        android:padding="@dimen/activity_vertical_margin" />
+        android:padding="@dimen/activity_vertical_margin"
+        android:background="@android:color/white"/>
 
     <Button
 
